...
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        view.backgroundColor = UIColor(named: "isubBackgroundColor")
        title = "Play Queue"
        
        if isModal {
            navigationItem.leftBarButtonItem = UIBarButtonItem(title: "Done", style: .done, target: self, action: #selector(dismiss(sender:)))
        }
        
        registerForNotifications()
...
        //        [EX2Dispatch runInMainThreadAsync:^{
        //            if (error) {
        //                // Inform the user that the connection failed.
        //                if (settingsS.isPopupsEnabled) {
        //                    NSString *message = [NSString stringWithFormat:@"There was an error saving the playlist to the server.\n\nError %li: %@", (long)error.code, error.localizedDescription];
        //                    UIAlertController *alert = [UIAlertController alertControllerWithTitle:@"Error" message:message preferredStyle:UIAlertControllerStyleAlert];
        //                    [alert addAction:[UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleCancel handler:nil]];
        //                    [self presentViewController:alert animated:YES completion:nil];
        //                }
        //
        //                self.tableView.scrollEnabled = YES;
        //                [viewObjectsS hideLoadingScreen];
        //            } else {
...
        if saveEditHeader.deleteLabel.isHidden {
            if !isEditing {
                if Settings.shared().isOfflineMode {
                    showSavePlaylistAlert(local: true)
                } else {
                    let message = "Would you like to save this playlist to your device or to your Subsonic server?"
                    let alert = UIAlertController(title: "Playlist Location", message: message, preferredStyle: .alert)
                    alert.addAction(UIAlertAction(title: "Local", style: .default, handler: { _ in
                        self.showSavePlaylistAlert(local: true)
                    }))
                    alert.addAction(UIAlertAction(title: "Server", style: .default, handler: { _ in
                        self.showSavePlaylistAlert(local: false)
                    }))
                    alert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: nil))
                    present(alert, animated: true, completion: nil)
                }
            }
...
